--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.main{
+  background-color: #F8FAFC;
+   
+    
+  background-size: 100% 60%;
+  height:100vh;
+  background-image:url("./img/Background\(1\).png") ;
+  background-repeat: no-repeat;
+  
+  background-position: bottom;
+  display:flex;
+}
+
+.container{
+  margin:auto;
+  padding:20px;
+  width:460px;
+  box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.forgot{
   text-align: center;
+  color:#625BF7;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.all-container{
+  margin:auto;
+  width:1000px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input{
+  height:30px;
+  width:400px;
+  padding:10px;
+  
+}
+.welcome{
+  color:#757575;
+  font-weight: 300;
+  font-size: 30px;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.icon{
+  height:28px;
+}
+
+.sign-para{
+  color:#333333;
+  font-weight: 500;
+  font-size: 40px;
+}
+
+.form{
+  font-weight: 300;
+  font-size: 25px;
+}
+
+button{
+  background-color: #5049EF;
+  font-weight: 500;
+  font-size: 20px;
+  padding:4px 4px;
+  border-radius: 5px;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width:400px;
+  height:7%;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.fields{
+  color:#625BF7;
+  
+  margin:auto;
+  padding-bottom: 5%;
+  width:440px;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.no-account{
+  margin:30px;
+  text-align: center;
+  
 }
+
